💝DARK-DEVIL-BOTZ🧜‍♂️

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "a17",
+    "name": "DDev-BOT",
     "version": "1.0.0",
-    "description": "A17 is a WhatsApp multiDevice Bot based on Miku and Baileys written in Javascript.",
+    "description": "DDev-BOT Is A WhatsApp MultiDevice Bot Based On Miku And Baileys Written In Javascript.",
     "main": "index.js",
     "directories": {
         "lib": "lib"
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Kao0071/A17.git"
+        "url": "git+https://github.com/DARK-DEVIL-BOTZ/DDev-BOT.git"
     },
     "keywords": [
         "md-bot"
@@ -20,9 +20,9 @@
     "author": "Kai",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/Kao0071/A17/issues"
+        "url": "https://github.com/DARK-DEVIL-BOTZ/DDev-BOT/issues"
     },
-    "homepage": "https://github.com/Kao0071/A17#readme",
+    "homepage": "https://github.com/DARK-DEVIL-BOTZ/DDev-BOT#readme",
     "devDependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
         "@hapi/boom": "^10.0.1",
