💝DARK-DEVIL-BOTZ🧜‍♂️

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
         "xfarr-api": "^1.0.3",
         "yargs": "^17.7.2",
         "youtube-yts": "^2.0.0",
-        "youtubedl-core": "^4.11.5"
+        "youtubedl-core": "^4.11.5",
+        "ytdl-core": "^4.11.5"
     }
 }
