💝DARK-DEVIL-BOTZ🧜‍♂️

--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "bot",
     "WhatsApp bot",
     "WhatsApp automation",
-    "multi-device"
+    "multi-device",
+    "DarkDevil"
   ],
   "buildpacks": [
     {
